; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_ibmpex.c_ibmpex_reset_high_low_data.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_ibmpex.c_ibmpex_reset_high_low_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ibmpex_bmc_data = type { i32, %struct.TYPE_2__, i32* }
%struct.TYPE_2__ = type { i32 }

@PEX_RESET_HIGH_LOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ibmpex_bmc_data*)* @ibmpex_reset_high_low_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ibmpex_reset_high_low_data(%struct.ibmpex_bmc_data* %0) #0 {
  %2 = alloca %struct.ibmpex_bmc_data*, align 8
  store %struct.ibmpex_bmc_data* %0, %struct.ibmpex_bmc_data** %2, align 8
  %3 = load i32, i32* @PEX_RESET_HIGH_LOW, align 4
  %4 = load %struct.ibmpex_bmc_data*, %struct.ibmpex_bmc_data** %2, align 8
  %5 = getelementptr inbounds %struct.ibmpex_bmc_data, %struct.ibmpex_bmc_data* %4, i32 0, i32 2
  %6 = load i32*, i32** %5, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 0
  store i32 %3, i32* %7, align 4
  %8 = load %struct.ibmpex_bmc_data*, %struct.ibmpex_bmc_data** %2, align 8
  %9 = getelementptr inbounds %struct.ibmpex_bmc_data, %struct.ibmpex_bmc_data* %8, i32 0, i32 1
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store i32 1, i32* %10, align 4
  %11 = load %struct.ibmpex_bmc_data*, %struct.ibmpex_bmc_data** %2, align 8
  %12 = call i32 @ibmpex_send_message(%struct.ibmpex_bmc_data* %11)
  %13 = load %struct.ibmpex_bmc_data*, %struct.ibmpex_bmc_data** %2, align 8
  %14 = getelementptr inbounds %struct.ibmpex_bmc_data, %struct.ibmpex_bmc_data* %13, i32 0, i32 0
  %15 = call i32 @wait_for_completion(i32* %14)
  ret i32 0
}

declare dso_local i32 @ibmpex_send_message(%struct.ibmpex_bmc_data*) #1

declare dso_local i32 @wait_for_completion(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
